force-app/main/default/objects/Scoring__c/Scoring__c.object-meta.xml
<CustomObject>
    <description>History scoring record for Hubspot lead scoring</description>
    <label>Scoring</label>
    <nameField>
        <label>Scoring Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scoring</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>