force-app/main/default/objects/Scoring__c/fields/Field_Event__c.field-meta.xml
<CustomField>
    <fullName>Field_Event__c</fullName>
    <label>Field Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>