force-app/main/default/objects/Scoring__c/fields/HS_Recent_conversion__c.field-meta.xml
<CustomField>
    <fullName>HS_Recent_conversion__c</fullName>
    <description>Last HS form submission at time of record creation</description>
    <label>HS Recent conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>